--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav>
             <ul>
                 <li><a href="html/automoviles.html">automoviles</a></li>
-                <li><a href="#">Pendiente</a></li>
+                <li><a href="/html/independencia.html">Independencia</a></li>
                 <li><a href="#">Pendiente</a></li>
             </ul>
         </nav>
