Se acabo la pagina de los carros

--- a/html/independencia.html
+++ b/html/independencia.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Independencia de Mexico, Hidalgo, Morelos, Allende, Dominguez, Josefa Ortiz">
     <meta name="author" content="Joseph Macario Jimenez Alferez">
     <meta name="keywords" content="Mexico, Independencia, Allende, Hidalgo, Josefa Ortiz">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="">
 
     <title>Independencia de Mexico</title>
 </head>
