--- a/index.html
+++ b/index.html
@@ -4,29 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="pagina de la materia de programacion web Upsin">
+    <link rel="stylesheet" href="css/index.css">
     <title>Practicas de la materia de Programacion web</title>
 </head>
 <body>
     <center>
-        <header>
+        <header class="cabeza">
             <h1>Joseph Macario Jimenez Alferez</h1>
             <h2>Grupo: TI 7-3</h2>
             <h3>UPSIN</h3>
         </header>
+        <div class="box">
+            <nav >
+                <ul>
+                    <li><a href="html/automoviles.html">automoviles</a></li>
+                    <li><a href="/html/independencia.html">Independencia</a></li>
+                    <li><a href="#">Pendiente</a></li>
+                    <li><a href="#">Pendiente</a></li>
+                    <li><a href="#">Pendiente</a></li>
+                </ul>
+            </nav>
+            <br>
 
-        <nav>
-            <ul>
-                <li><a href="html/automoviles.html">automoviles</a></li>
-                <li><a href="/html/independencia.html">Independencia</a></li>
-                <li><a href="#">Pendiente</a></li>
-            </ul>
-        </nav>
-        <br>
-        <section>
-            <img src="assets/autor.png" alt="Imagen de autor de pagina" width="200px">
-        </section>
+            
+            <section class="autor">
+                <p>Autor</p>
+                <img  class="img_autor" src="assets/autor.png" alt="Imagen de autor de pagina" width="200px">
+            </section>
+        </div>
 
-        <hr>
 
         <footer>
             <h2>Todos los derechos reservados por Joseph Macario Jimenez Alferez</h2>
