Se modifico estilo automoviles para flex en carros

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <ul>
                     <li><a href="html/automoviles.html">automoviles</a></li>
                     <li><a href="/html/independencia.html">Independencia</a></li>
-                    <li><a href="#">Pendiente</a></li>
+                    <li><a href="/html/flex.html">Flex</a></li>
                     <li><a href="#">Pendiente</a></li>
                     <li><a href="#">Pendiente</a></li>
                 </ul>
