Se realizo la practica de formularios

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <li><a href="html/automoviles.html">automoviles</a></li>
                     <li><a href="/html/independencia.html">Independencia</a></li>
                     <li><a href="/html/flex.html">Flex</a></li>
-                    <li><a href="#">Pendiente</a></li>
+                    <li><a href="/html/formularios.html">Formularios</a></li>
                     <li><a href="#">Pendiente</a></li>
                 </ul>
             </nav>
