Practica de formularios

--- a/html/automoviles.html
+++ b/html/automoviles.html
@@ -32,6 +32,8 @@
 
             <li><a href="#chevrolet">Chevrolet</a></li>
 
+            <li><a href="/html/cotizacion.html">Cotizacion</a></li>
+
         </ul>
     </nav>
 
