Se cambio el correo dirigido al formulario

--- a/html/cotizacion.html
+++ b/html/cotizacion.html
@@ -12,7 +12,7 @@
         <img src="/assets/imgAutos/imganeEmpresaAuto.png" alt="Imagen empresa AutoSleek">
     </header>
     <main>
-        <form action="https://formsubmit.co/jimenezalferezjoseph@gmail.com" method="post" class="tarjeta">
+        <form action="https://formsubmit.co/microinformaticamx@gmail.com" method="post" class="tarjeta">
             
             <p>informacion personal</p>
             <label for="Nombre">Nombre</label>
