mismo cambio del punto en paginas

--- a/html/independencia.html
+++ b/html/independencia.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Independencia de Mexico, Hidalgo, Morelos, Allende, Dominguez, Josefa Ortiz">
     <meta name="author" content="Joseph Macario Jimenez Alferez">
     <meta name="keywords" content="Mexico, Independencia, Allende, Hidalgo, Josefa Ortiz">
-    <link rel="stylesheet" href="/css/independencia.css">
+    <link rel="stylesheet" href="./css/independencia.css">
 
     <title>Independencia de Mexico</title>
 </head>
@@ -19,7 +19,7 @@
     
     <nav>
         <ul>
-            <li><a href="/index.html">Index</a></li>
+            <li><a href="./index.html">Index</a></li>
             <li><a href="#Miguel">Miguel Hidalgo</a></li>
             <li><a href="#Josefa">Josefa Ortiz</a></li>
             <li><a href="#Jose">Jose Maria Morelos</a></li>
@@ -39,7 +39,7 @@
         <p class="nombre"><a id="Miguel"></a>Miguel Hidalgo y Costilla</p>
         <br>
         <div class="box">
-            <img id="miguel" src="/assets/imgInd/miguelHidalgo.jpg" alt="Imagen de Miguel Hidalgo">
+            <img id="miguel" src="./assets/imgInd/miguelHidalgo.jpg" alt="Imagen de Miguel Hidalgo">
             <p class="explicacion"> Sacerdote y líder de la independencia de México, Hidalgo es conocido por dar el famoso “Grito de Dolores” el 16 de septiembre de 1810, 
                 llamando al pueblo a levantarse contra el dominio español. Además de su labor religiosa, promovió ideas de igualdad y justicia social, criticando los abusos de los 
                 españoles y la opresión hacia indígenas y mestizos. Su liderazgo marcó el inicio de la lucha independentista, inspirando a numerosos insurgentes, aunque fue capturado 
@@ -62,7 +62,7 @@
         <p class="nombre"><a id="Jose"></a>Jose Maria Morelos y Pavon</p>
         <br>
         <div class="box">
-            <img id="maria" src="/assets/imgInd/mariaMorelos.jpeg" alt="Imagen de Jose Maria Morelos">
+            <img id="maria" src="./assets/imgInd/mariaMorelos.jpeg" alt="Imagen de Jose Maria Morelos">
             <p class="explicacion">Sacerdote y militar insurgente, Morelos continuó la lucha tras la muerte de Hidalgo, consolidando el movimiento independentista en el sur de México. 
                 Organizó ejércitos, capturó ciudades y convocó el Congreso de Chilpancingo, donde se sentaron las bases legales y políticas de la futura nación. 
                 Fue un estratega militar destacado y un líder comprometido con la igualdad social, abogando por la abolición de la esclavitud y los privilegios de clase. 
@@ -72,7 +72,7 @@
         <p class="nombre"><a id="Ignacio"></a>Ignacio Allende</p>
         <br>
         <div  class="box">
-            <img id="ignacio" src="/assets/imgInd/ignacioAllende.jpg" alt="Imagen de Ignacio Allende">
+            <img id="ignacio" src="./assets/imgInd/ignacioAllende.jpg" alt="Imagen de Ignacio Allende">
             <p class="explicacion">Militar criollo y uno de los principales aliados de Miguel Hidalgo, Allende fue un estratega fundamental en las primeras etapas de la independencia de México. 
                 Desde su posición en el ejército, ayudó a planear levantamientos, dirigir tropas y coordinar la insurgencia. Su experiencia militar 
                 permitió organizar campañas más efectivas y mantener la disciplina entre los insurgentes. Capturado junto a Hidalgo, 
