intneto arreglar css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="pagina de la materia de programacion web Upsin">
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="../css/index.css">
     <title>Practicas de la materia de Programacion web</title>
 </head>
 <body>
@@ -17,10 +17,10 @@
         <div class="box">
             <nav >
                 <ul>
-                    <li><a href="./html/automoviles.html">automoviles</a></li>
-                    <li><a href="./html/independencia.html">Independencia</a></li>
-                    <li><a href="./html/flex.html">Flex</a></li>
-                    <li><a href="./html/formularios.html">Formularios</a></li>
+                    <li><a href="../html/automoviles.html">automoviles</a></li>
+                    <li><a href="../html/independencia.html">Independencia</a></li>
+                    <li><a href="../html/flex.html">Flex</a></li>
+                    <li><a href="../html/formularios.html">Formularios</a></li>
                     <li><a href="#">Pendiente</a></li>
                 </ul>
             </nav>
@@ -29,7 +29,7 @@
             
             <section class="autor">
                 <p>Autor</p>
-                <img  class="img_autor" src="./assets/autor.png" alt="Imagen de autor de pagina" width="200px">
+                <img  class="img_autor" src="../assets/autor.png" alt="Imagen de autor de pagina" width="200px">
             </section>
         </div>
 
